# luci-app-qddns

./: .gitignore  Cargo.toml  README.md
applications/luci-app-qddns/: Makefile
applications/luci-app-qddns/htdocs/luci-static/resources/view/qddns/: logs.js  overview.js  rules.js  settings.js  shared.js
applications/luci-app-qddns/po/zh_Hans/: qddns.po
applications/luci-app-qddns/root/usr/share/luci/menu.d/: luci-app-qddns.json
applications/luci-app-qddns/root/usr/share/rpcd/acl.d/: luci-app-qddns.json
applications/luci-app-qddns/root/usr/share/rpcd/ucode/: qddns.uc
net/qddns/: Makefile
net/qddns/files/: qddns.config  qddns.init  state.example.json
qddns/: Cargo.toml
qddns/src/: cli.rs  config.rs  daemon.rs  discover.rs  error.rs  http.rs  json.rs  leases.rs  lib.rs  logstore.rs  network.rs  provider.rs  runner.rs  source.rs  state.rs
qddns/src/provider/: aliyun.rs  cloudflare.rs  custom_http.rs  dnspod.rs  mod.rs  tests.rs
qddns/tests/: cli.rs  config_and_sources.rs  http_client.rs  provider_custom_http.rs  runner.rs  runtime_persistence.rs  security_regression.rs  source_http.rs  strict_config.rs  typed_config.rs
qddns/tests/support/: mod.rs
tests/: check_acl_boundaries.py  check_rpcd_redaction.py  selftest.conf  verify.sh
