[package]
name = "qddns"
version = "0.2.0"
edition = "2021"
license = "GPL-2.0-only"

[lib]
name = "qddns"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
percent-encoding = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
time = { version = "=0.3.44", features = ["formatting"] }
socket2 = { version = "0.6.4", features = ["all"] }
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }

[[bin]]
name = "qddnsctl"
path = "src/bin/qddnsctl.rs"

[[bin]]
name = "qddnsd"
path = "src/bin/qddnsd.rs"
